src/plugins/media-analysis/media-analysis.less
@media-analysis-text-padding: 5px;

.MediaAnalysisDisplay {}

.MediaAnalysisDisplay-content {
  margin: 0 auto;
}

.MediaAnalysisDisplay-chapters {
  margin-top: 10px;
  position: relative;
}

.MediaAnalysisDisplay-chapterTitles {
  display: flex;
  height: 40px;
  line-height: 40px;
  margin-bottom: 10px;
}

.MediaAnalysisDisplay-chapterTitle {
  .m-overflow-ellipsis;
  text-align: center;
  padding: 0 @media-analysis-text-padding;
  border-left: 1px dotted @edu-white;
  border-right: 1px dotted @edu-border-color-dark;
  cursor: default;

  &.MediaAnalysisDisplay-chapterTitle--interactive {
    cursor: pointer;
  }

  &:first-of-type {
    border-left: none;
  }

  &:last-of-type {
    border-right: none;
  }
}

.MediaAnalysisDisplay-chapterTexts {
  height: 35px;
  display: flex;
  overflow: hidden;
  padding-bottom: 5px;

  &.is-expanded {
    height: auto;
  }
}

.MediaAnalysisDisplay-chapterText {
  padding: @media-analysis-text-padding;
  border-right: 1px dotted @edu-border-color-base;

  & p {
    .m-overflow-ellipsis;
  }

  &.is-expanded p {
    overflow: auto;
    white-space: unset;
    text-overflow: unset;
  }

  &:last-of-type {
    border-right: none;
  }
}

.MediaAnalysisDisplay-chaptersTextsToggle {
  position: absolute;
  right: 5px;
  bottom: -12px;
  font-size: @edu-font-size-sm;
  user-select: none;
}

.MediaAnalysisEditor {}

.MediaAnalysisEditor-trackMixerPreview {
  margin-bottom: 20px;
}

.MediaAnalysisEditor-segmentsDropzone {
  border-radius: @edu-border-radius-base;
  position: relative;

  &.is-dropping {
    .ant-collapse {
      .m-dropzone;
      .m-dropzone-active;
    }
  }

  &.is-drop-rejected {
    .ant-collapse {
      .m-dropzone;
      .m-dropzone-error;
    }
  }
}

.MediaAnalysisEditor-segmentsDropzoneInfo {
  border-radius: @edu-border-radius-base;
  position: absolute;
  right: 1em;
  bottom: 1.5em;
}

.MediaAnalysisEditor-trackMixerPreview {
  .m-plugin-media-preview;
}

.MediaAnalysisEditor-trackMixerPreviewLabel {
  .m-plugin-media-preview-label;
}

.MediaAnalysisEditor-segmentsActionButton {
  color: @edu-text-color;
}

